# linux-teasing

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.ps1  install.sh
.github/: copilot-instructions.md  state-machines.md
docs/: getting-started.md  rust_cli_architecture.md  timestamp_and_timezones.md
src/: ascii.rs  detector.rs  main.rs  message.rs  renderer.rs  state.rs
