[package]
name = "linux-teasing"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
crossterm = "0.27"
rand = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
